--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,15 @@ server.error.include-message=always
 logging.level.org.springframework=info
 # MySQL/JPA Configuration
 spring.sql.init.mode=always
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/peekprospects
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/peekprospects
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Voor cloud omgeving
-#spring.datasource.url=jdbc:postgresql://dpg-clnk0boapebc739q8hu0-a.oregon-postgres.render.com/db_d6fn
-#spring.datasource.username=db_d6fn_user
-#spring.datasource.password=TSSIFDfEpntc2QDM0eSdkdxXC4sCGA3h
-#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://dpg-cmeqlrmn7f5s7380a7eg-a.oregon-postgres.render.com/appdb_86e5
+spring.datasource.username=appdb_86e5_user
+spring.datasource.password=izSUq7SCm41M3DeR3EUj4XxGqfLY8kXy
+spring.datasource.driver-class-name=org.postgresql.Driver
 # (JPA)
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
@@ -21,9 +21,9 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.generate_statistics=false
 spring.jpa.properties.javax.persistence.validation.mode=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 # Logging
 logging.level.org.hibernate.stat=debug
 logging.level.org.hibernate.type=trace
